--- a/CustomRPC/UpdatePrompt.ar-EG.resx
+++ b/CustomRPC/UpdatePrompt.ar-EG.resx
@@ -134,7 +134,7 @@
     <value>156, 18</value>
   </data>
   <data name="checkBoxNeverNotify.Text" xml:space="preserve">
-    <value>لا تبحث عن تحديثات اخري</value>
+    <value>لا تبحث عن تحديثات اخرى</value>
   </data>
   <data name="labelVersionsText.Text" xml:space="preserve">
     <value>الاصدار الحالي:
