--- a/CustomRPC/About.id.resx
+++ b/CustomRPC/About.id.resx
@@ -117,36 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="buttonUpdate.Text" xml:space="preserve">
-    <value>Tak</value>
-  </data>
-  <data name="buttonNotNow.Text" xml:space="preserve">
-    <value>Nie teraz</value>
-  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
-    <value>182, 14</value>
+  <data name="labelMadeBy.Location" type="System.Drawing.Point, System.Drawing">
+    <value>150, 93</value>
   </data>
-  <data name="labelQuestion.Text" xml:space="preserve">
-    <value>Chciałbyś pobrać tą aktualizacje?</value>
+  <data name="labelMadeBy.Size" type="System.Drawing.Size, System.Drawing">
+    <value>197, 19</value>
   </data>
-  <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>257, 18</value>
+  <data name="labelMadeBy.Text" xml:space="preserve">
+    <value>Dibuat oleh: maximmax42</value>
   </data>
-  <data name="checkBoxNeverNotify.Text" xml:space="preserve">
-    <value>Nigdy nie sprawdzaj aktualizacji ponownie</value>
-  </data>
-  <data name="labelVersionsText.Text" xml:space="preserve">
-    <value>Aktualna wersja:
-Najnowsza wersja:</value>
-  </data>
-  <data name="buttonSkipUpdate.Size" type="System.Drawing.Size, System.Drawing">
-    <value>128, 23</value>
-  </data>
-  <data name="buttonSkipUpdate.Text" xml:space="preserve">
-    <value>Pomiń tą wersję</value>
+  <data name="buttonClose.Text" xml:space="preserve">
+    <value>Tutup</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Dostępna jest nowa aktualizacja</value>
+    <value>Tentang</value>
   </data>
 </root>
