--- a/CustomRPC/MainForm.nl.resx
+++ b/CustomRPC/MainForm.nl.resx
@@ -441,4 +441,7 @@ Om van kracht te worden, moeten beide velden groter zijn dan 0.</value>
   <data name="openToolStripMenuItem.Text" xml:space="preserve">
     <value>Open</value>
   </data>
+  <data name="autoconnectToolStripMenuItem.Text" xml:space="preserve">
+    <value>Automatisch verbinden</value>
+  </data>
 </root>
