--- a/CustomRPC/Strings.id.resx
+++ b/CustomRPC/Strings.id.resx
@@ -117,36 +117,48 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="buttonUpdate.Text" xml:space="preserve">
-    <value>Tak</value>
+  <data name="error" xml:space="preserve">
+    <value>Error</value>
   </data>
-  <data name="buttonNotNow.Text" xml:space="preserve">
-    <value>Nie teraz</value>
+  <data name="errorNoID" xml:space="preserve">
+    <value>Tidak ada ID yang ditentukan!</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
-    <value>182, 14</value>
+  <data name="errorUpdateFailed" xml:space="preserve">
+    <value>Terjadi kesalahan saat mengunduh atau memasang pembaruan.
+Tekan "Ya" untuk mencoba lagi atau "Tidak" untuk mengunduh secara manual.</value>
   </data>
-  <data name="labelQuestion.Text" xml:space="preserve">
-    <value>Chciałbyś pobrać tą aktualizacje?</value>
+  <data name="firstTimeRun" xml:space="preserve">
+    <value>Pertama Kali</value>
   </data>
-  <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>257, 18</value>
+  <data name="firstTimeRunText" xml:space="preserve">
+    <value>Apakah Anda ingin membuka manual?
+Anda dapat membukanya kapan saja dengan masuk ke Bantuan -&gt; Buka Manual atau tekan F1.</value>
   </data>
-  <data name="checkBoxNeverNotify.Text" xml:space="preserve">
-    <value>Nigdy nie sprawdzaj aktualizacji ponownie</value>
+  <data name="information" xml:space="preserve">
+    <value>Informasi</value>
   </data>
-  <data name="labelVersionsText.Text" xml:space="preserve">
-    <value>Aktualna wersja:
-Najnowsza wersja:</value>
+  <data name="statusConnected" xml:space="preserve">
+    <value>Terhubung</value>
   </data>
-  <data name="buttonSkipUpdate.Size" type="System.Drawing.Size, System.Drawing">
-    <value>128, 23</value>
+  <data name="statusConnecting" xml:space="preserve">
+    <value>Menghubungkan...</value>
   </data>
-  <data name="buttonSkipUpdate.Text" xml:space="preserve">
-    <value>Pomiń tą wersję</value>
+  <data name="statusConnectionFailed" xml:space="preserve">
+    <value>Koneksi gagal (Apakah Discord berjalan?)</value>
   </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value>Dostępna jest nowa aktualizacja</value>
+  <data name="statusDisconnected" xml:space="preserve">
+    <value>Terputus</value>
+  </data>
+  <data name="statusError" xml:space="preserve">
+    <value>Kesalahan koneksi (ID Salah?)</value>
+  </data>
+  <data name="errorInvalidURL" xml:space="preserve">
+    <value>URL untuk tombol tidak valid atau teksnya terlalu panjang!</value>
+  </data>
+  <data name="errorNoInternet" xml:space="preserve">
+    <value>Tidak dapat terhubung ke internet!</value>
+  </data>
+  <data name="noUpdatesFound" xml:space="preserve">
+    <value>Tidak ada perbaharuan!</value>
   </data>
 </root>
