--- a/CustomRPC/UpdatePrompt.id.resx
+++ b/CustomRPC/UpdatePrompt.id.resx
@@ -118,35 +118,35 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="buttonUpdate.Text" xml:space="preserve">
-    <value>Tak</value>
-  </data>
-  <data name="buttonNotNow.Text" xml:space="preserve">
-    <value>Nie teraz</value>
+    <value>Iya</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="buttonNotNow.Location" type="System.Drawing.Point, System.Drawing">
+    <value>193, 326</value>
+  </data>
+  <data name="buttonNotNow.Size" type="System.Drawing.Size, System.Drawing">
+    <value>98, 23</value>
+  </data>
+  <data name="buttonNotNow.Text" xml:space="preserve">
+    <value>Tidak Sekarang</value>
+  </data>
   <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
-    <value>182, 14</value>
+    <value>246, 14</value>
   </data>
   <data name="labelQuestion.Text" xml:space="preserve">
-    <value>Chciałbyś pobrać tą aktualizacje?</value>
-  </data>
-  <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
-    <value>257, 18</value>
+    <value>Apa kamu ingin mengunduh pembaruan ini?</value>
   </data>
   <data name="checkBoxNeverNotify.Text" xml:space="preserve">
-    <value>Nigdy nie sprawdzaj aktualizacji ponownie</value>
+    <value>Jangan periksa pembaruan lagi</value>
   </data>
   <data name="labelVersionsText.Text" xml:space="preserve">
-    <value>Aktualna wersja:
-Najnowsza wersja:</value>
-  </data>
-  <data name="buttonSkipUpdate.Size" type="System.Drawing.Size, System.Drawing">
-    <value>128, 23</value>
+    <value>Versi sekarang:
+Versi paling terbaru:</value>
   </data>
   <data name="buttonSkipUpdate.Text" xml:space="preserve">
-    <value>Pomiń tą wersję</value>
+    <value>Lewati versi ini</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Dostępna jest nowa aktualizacja</value>
+    <value>Perbaharuan tersedia</value>
   </data>
 </root>
