--- a/CustomRPC/MainForm.ar-EG.resx
+++ b/CustomRPC/MainForm.ar-EG.resx
@@ -428,4 +428,7 @@
   <data name="$this.RightToLeftLayout" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="autoconnectToolStripMenuItem.Text" xml:space="preserve">
+    <value>اعادة الاتصال</value>
+  </data>
 </root>
