--- a/CustomRPC/About.th.resx
+++ b/CustomRPC/About.th.resx
@@ -125,7 +125,7 @@
     <value>143, 19</value>
   </data>
   <data name="labelMadeBy.Text" xml:space="preserve">
-    <value>โดย: maximmax42</value>
+    <value>จัดทำโดย: maximmax42</value>
   </data>
   <data name="buttonClose.Text" xml:space="preserve">
     <value>ปิด</value>
