--- a/CustomRPC/UpdatePrompt.he.resx
+++ b/CustomRPC/UpdatePrompt.he.resx
@@ -128,7 +128,7 @@
     <value>197, 14</value>
   </data>
   <data name="labelQuestion.Text" xml:space="preserve">
-    <value>אתה רוצה לעדכן את העדכון הזה?</value>
+    <value>האם אתה רוצה להוריד את העדכון הזה?</value>
   </data>
   <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
     <value>228, 18</value>
