--- a/CustomRPC/Strings.uk.resx
+++ b/CustomRPC/Strings.uk.resx
@@ -117,14 +117,48 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="favicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\favicon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="error" xml:space="preserve">
+    <value>Похибка</value>
   </data>
-  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="errorNoID" xml:space="preserve">
+    <value>Немає ID!</value>
   </data>
-  <data name="globe" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\globe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="errorUpdateFailed" xml:space="preserve">
+    <value>Сталася помилка під час завантаження або встановлення оновлення. 
+Натисніть "Так", щоб спробувати ще раз або "Ні", щоб встановити вручну.</value>
+  </data>
+  <data name="firstTimeRun" xml:space="preserve">
+    <value>Перший запуск</value>
+  </data>
+  <data name="firstTimeRunText" xml:space="preserve">
+    <value>Хочете відкрити мануал?
+Ви можете його відкрити натиснувши Допомога -&gt; Відкрити мануал або натиснувши F1.</value>
+  </data>
+  <data name="information" xml:space="preserve">
+    <value>Інформація</value>
+  </data>
+  <data name="statusConnected" xml:space="preserve">
+    <value>Під'єднано</value>
+  </data>
+  <data name="statusConnecting" xml:space="preserve">
+    <value>Під'єднання...</value>
+  </data>
+  <data name="statusConnectionFailed" xml:space="preserve">
+    <value>Підключення не вдалось (Діскорд запущений?)</value>
+  </data>
+  <data name="statusDisconnected" xml:space="preserve">
+    <value>Відключено</value>
+  </data>
+  <data name="statusError" xml:space="preserve">
+    <value>Помилка підключення (Неправильний ID?)</value>
+  </data>
+  <data name="errorInvalidURL" xml:space="preserve">
+    <value>Неправильний URL для кнопок або текст задовгий!</value>
+  </data>
+  <data name="errorNoInternet" xml:space="preserve">
+    <value>Неможливо під'єднатись до інтернету!</value>
+  </data>
+  <data name="noUpdatesFound" xml:space="preserve">
+    <value>Не знайдено оновлень!</value>
   </data>
 </root>
