--- a/CustomRPC/UpdatePrompt.uk.resx
+++ b/CustomRPC/UpdatePrompt.uk.resx
@@ -117,14 +117,33 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="favicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\favicon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="buttonUpdate.Text" xml:space="preserve">
+    <value>Так</value>
   </data>
-  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="buttonNotNow.Text" xml:space="preserve">
+    <value>Не зараз</value>
   </data>
-  <data name="globe" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\globe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
+    <value>206, 14</value>
+  </data>
+  <data name="labelQuestion.Text" xml:space="preserve">
+    <value>Хочете встановити це оновлення?</value>
+  </data>
+  <data name="checkBoxNeverNotify.Text" xml:space="preserve">
+    <value>Не перевіряти на оновлення</value>
+  </data>
+  <data name="labelVersionsText.Text" xml:space="preserve">
+    <value>Теперішня версія:
+Остання версія:</value>
+  </data>
+  <data name="buttonSkipUpdate.Size" type="System.Drawing.Size, System.Drawing">
+    <value>143, 23</value>
+  </data>
+  <data name="buttonSkipUpdate.Text" xml:space="preserve">
+    <value>Пропустити цю версію</value>
+  </data>
+  <data name="$this.Text" xml:space="preserve">
+    <value>Доступне оновлення</value>
   </data>
 </root>
